maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:11: error: not found: value hasBaggle
  while(!hasBaggle(x,y))
         ^PledgeMaze:18: error: not found: value setIndication
  setIndication(x,y,0)
  ^PledgeMaze:28: error: not found: value hasLeftWall
      if(x>0 && !hasLeftWall(x,y) && getIndication(x-1,y)==9999){
                 ^PledgeMaze:28: error: not found: value getIndication
      if(x>0 && !hasLeftWall(x,y) && getIndication(x-1,y)==9999){
                                     ^PledgeMaze:29: error: not found: value setIndication
        setIndication(x-1,y,num+1)
        ^PledgeMaze:32: error: not found: value hasTopWall
      if(y>0 && !hasTopWall(x,y) && getIndication(x,y-1)==9999 ){
                 ^PledgeMaze:32: error: not found: value getIndication
      if(y>0 && !hasTopWall(x,y) && getIndication(x,y-1)==9999 ){
                                    ^PledgeMaze:33: error: not found: value setIndication
        setIndication(x,y-1,num+1)
        ^PledgeMaze:36: error: not found: value hasLeftWall
      if(x<n-1 && !hasLeftWall(x+1,y) && getIndication(x+1,y)==9999 ){
                   ^PledgeMaze:36: error: not found: value getIndication
      if(x<n-1 && !hasLeftWall(x+1,y) && getIndication(x+1,y)==9999 ){
                                         ^PledgeMaze:37: error: not found: value setIndication
        setIndication(x+1,y,num+1)
        ^PledgeMaze:40: error: not found: value hasTopWall
      if(y<m-1 && !hasTopWall(x,y+1) && getIndication(x,y+1)==9999){
                   ^PledgeMaze:40: error: not found: value getIndication
      if(y<m-1 && !hasTopWall(x,y+1) && getIndication(x,y+1)==9999){
                                        ^PledgeMaze:41: error: not found: value setIndication
        setIndication(x,y+1,num+1)
        ^PledgeMaze:61: error: not found: value getIndication
  var numb = getIndication(x,y)
             ^PledgeMaze:68: error: not found: value getIndication
    if(x>0 && getIndication(x-1,y)==numb-1){
              ^PledgeMaze:76: error: not found: value getIndication
    if(x<n-1 && getIndication(x+1,y)==numb-1){
                ^PledgeMaze:84: error: not found: value getIndication
    if(y>0 && getIndication(x,y-1)==numb-1){
              ^PledgeMaze:92: error: not found: value getIndication
    if(y<m-1 && getIndication(x,y+1)==numb-1){
                ^